💄 fix font and margins on smaller screens

--- a/src/pages/landing/style.scss
+++ b/src/pages/landing/style.scss
@@ -16,8 +16,8 @@ section {
           display: flex;
           flex-direction: column;
           align-items: flex-start;
-          margin-top: 18%;
-          margin-left: 32%;
+          margin-top: 7rem;
+          margin-left: 12rem;
           text-align: start;
 
           .greeting {
@@ -26,7 +26,7 @@ section {
           }
 
           .heading {
-            font-size: 72px;
+            font-size: 64px;
             line-height: 130%;
             span {
               color: $lightSpecialColor;
@@ -38,7 +38,7 @@ section {
           }
         
           .tagline {
-            font-size: 40px;
+            font-size: 32px;
             line-height: 130%;
           }
 
